Remove OH2 leftover in Karaf Add-On service (#3026)
OH1 add-ons are not present in the OH3 distribution as they are not supported anyway, so we do not to filter them.

Signed-off-by: Jan N. Klug <github@klug.nrw>